fix width height on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,11 @@ body::-webkit-scrollbar{
 
 @media only screen and (max-width:426px) {
 
-
+html,body{
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
 
 
 }
